--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "class-transformer": "^0.2.0",
     "core-js": "^2.5.4",
     "firebase": "^5.9.0",
     "rxjs": "~6.3.3",
