--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "primeicons": "^1.0.0",
     "primeng": "^7.1.0",
     "rxjs": "~6.3.3",
+    "sweetalert2": "^8.9.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
