--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-transformer": "^0.2.0",
     "core-js": "^2.5.4",
     "firebase": "^8.2.6",
+    "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.0",
     "rxjs": "~6.6.3",
